@@ -570,11 +570,7 @@ include_once "include/page_header.php";
 
 		$result = DBselect('select * from usrgrp where '.DBin_node('usrgrpid').' order by name');
 		while($row = DBfetch($result)){
-			$name = new CLink(
-					get_node_name_by_elid($row['usrgrpid']).$row['name'],
-					'#',
-					'action'
-					);
+			$name = new CSpan(get_node_name_by_elid($row['usrgrpid']).$row['name'],'link');
 					
 			if(isset($_REQUEST['reference']) && ($_REQUEST['reference'] =='dashboard')){
 				$action = get_window_opener($dstfrm, $dstfld1, $srcfld2).
@@ -586,7 +582,7 @@ include_once "include/page_header.php";
 				(isset($srcfld2) ? get_window_opener($dstfrm, $dstfld2, $row[$srcfld2]) : '');
 			}
 			
-			$name->setAction($action." close_window(); return false;");			
+			$name->onClick($action.' close_window(); return false;');
 
 			$table->addRow($name);
 		}
@@ -594,15 +590,10 @@ include_once "include/page_header.php";
 	}
 	else if($srctbl == "users"){
 		$table = new CTableInfo(S_NO_USERS_DEFINED);
-		$table->setHeader(array(S_NAME));
+		$table->setHeader(array(S_ALIAS, S_NAME, S_SURNAME));
 
-		$result = DBselect('select * from users where '.DBin_node('userid').' order by name');
-		while($row = DBfetch($result)){
-			$name = new CLink(
-					get_node_name_by_elid($row['userid']).$row['alias'],
-					'#',
-					'action'
-					);
+		$result = DBselect('select * from users where '.DBin_node('userid').' order by alias');
+		while($row = DBfetch($result)){			
 			if(isset($_REQUEST['reference']) && ($_REQUEST['reference'] =='dashboard')){
 				$action = get_window_opener($dstfrm, $dstfld1, $srcfld2).
 					get_window_opener($dstfrm, $dstfld2, $row[$srcfld2]).
@@ -612,10 +603,10 @@ include_once "include/page_header.php";
 				$action = get_window_opener($dstfrm, $dstfld1, $row[$srcfld1]).
 				(isset($srcfld2) ? get_window_opener($dstfrm, $dstfld2, $row[$srcfld2]) : '');
 			}
-			
-			$name->SetAction($action." close_window(); return false;");
+			$alias = new CSpan(get_node_name_by_elid($row['userid']).$row['alias'], 'link');
+			$alias->onClick($action.' close_window(); return false;');
 
-			$table->addRow($name);
+			$table->addRow(array($alias, $row['name'], $row['surname']));
 		}
 		$table->Show();
 	}
