@@ -1,5 +1,6 @@
 Changes for 1.6.5
 
+ - [ZBX-851] changed sorting of users  to alias in popup (Artem)
  - [ZBX-849] fixed permissions problem for users in dashboard (Artem)
  - [ZBX-797] fixed possible manual deletion of web items (Vedmak)
  - [ZBX-847] fixed error in "Status of ZABBIX" when server is not running (Vedmak)
